--- a/blog_app/templates/blog_app/base.html
+++ b/blog_app/templates/blog_app/base.html
@@ -55,8 +55,12 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-group">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">
+                        <a href="{% url 'create-post' %}" class="link-primary">Create Post</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="{% url 'my-posts' %}" class="link-primary">My Posts</a>
+                    </li>
                     <li class="list-group-item">Morbi leo risus</li>
                     <li class="list-group-item">Porta ac consectetur ac</li>
                     <li class="list-group-item">Vestibulum at eros</li>
