--- a/blog_app/templates/blog_app/home.html
+++ b/blog_app/templates/blog_app/home.html
@@ -7,16 +7,19 @@
     <div class="card mb-3">
         <div class="card-body">
             {% if post.title %}
-                <h5 class="card-title">{{ post.title }}</h5>
+                <h5 class="card-title">
+                    <a href="{% url 'post-detail' post.pk %}" class="link-primary">{{ post.title }}</a>
+                </h5>
             {% else %}
                 <h5 class="card-title">Django Post</h5>
             {% endif %}
             <p class="card-text">Author: {{ post.author }}</p>
             <p class="card-text">{{ post.content }}</p>
-            <a href="#" class="link-primary">Read more</a>
+            <a href="{% url 'post-detail' post.pk %}" class="link-primary">Read more</a>
             <p class="card-text">Posted on: {{ post.date_posted }}</p>
         </div>
     </div>
 {% endfor %}
 
 {% endblock %}
+
